<resources>
    <string name="app_name">fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag1_text">H</string>
    <string name="frag2_text">Количество денег</string>
    <string name="start">Начать!</string>
    <string name="find">Find</string>
    <string name="timertxt">Количество захватчиков</string>
    <string name="restart">Попробовать ещё раз</string>
    <string name="next">Следующий уровень</string>
    <string name="up1">Улучшить оружие (400)</string>
    <string name="up2">Улучшить корабль (1000)</string>
    <string name="reset">Сброс</string>
    <string name="toofew">Вам не хватает денег</string>
</resources>